--- a/Opdracht1/report/opdracht1.tex
+++ b/Opdracht1/report/opdracht1.tex
@@ -62,6 +62,112 @@
  \section{Question 2}
  
  	\subsection{Question 2.1}
+ 	First we create our signature matrix
+ 	
+ 	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 a (0) & 1 & 0 & 0 & 1 \\
+	 b (1) & 0 & 0 & 1 & 0 \\
+	 c (2) & 0 & 1 & 0 & 1 \\
+	 d (3) & 1 & 0 & 1 & 1 \\
+	 e (4) & 0 & 0 & 1 & 0   
+	\end{tabular}
+	\caption{Signature matrix}
+	\end{table}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & $\infty$ & $\infty$ & $\infty$ & $\infty$ \\
+	 $h_2$ & $\infty$ & $\infty$ & $\infty$ & $\infty$
+	\end{tabular}
+	\caption{Initialization}
+	\end{table}
+	
+	\begin{align}
+		h_1(0) &= 1 \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 1 \\
+		h_2(0) &= (3 \cdot 0 + 1) \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 1 
+	\end{align}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & 1 & $\infty$ & $\infty$ & 1 \\
+	 $h_2$ & 1 & $\infty$ & $\infty$ & 1
+	\end{tabular}
+	\caption{Row 0}
+	\end{table}
+	
+	\begin{align}
+		h_1(1) &= 2 \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 2 \\
+		h_2(1) &= (3 \cdot 1 + 1) \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 4 
+	\end{align}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & 1 & $\infty$ & 2 & 1 \\
+	 $h_2$ & 1 & $\infty$ & 4 & 1
+	\end{tabular}
+	\caption{Row 1}
+	\end{table}
+	
+	\begin{align}
+		h_1(2) &= 3 \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 3 \\
+		h_2(2) &= (3 \cdot 2 + 1) \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 2 
+	\end{align}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & 1 & 3 & 2 & 1 \\
+	 $h_2$ & 1 & 2 & 4 & 1
+	\end{tabular}
+	\caption{Row 2}
+	\end{table}
+	
+	\begin{align}
+		h_1(3) &= 4 \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 3 \\
+		h_2(3) &= (3 \cdot 3 + 1) \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 0
+	\end{align}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & 1 & 3 & 2 & 1 \\
+	 $h_2$ & 0 & 2 & 0 & 0
+	\end{tabular}
+	\caption{Row 3}
+	\end{table}
+	
+	\begin{align}
+		h_1(4) &= 5 \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 0 \\
+		h_2(4) &= (3 \cdot 4 + 1) \hspace{5pt} \mbox{mod} \hspace{5pt} 5 = 3
+	\end{align}
+	
+	\begin{table}[h!]
+	\centering
+	\label{my-label}
+	\begin{tabular}{lllll}
+	 & s1 & s2 & s3 & s4 \\
+	 $h_1$ & 1 & 3 & 0 & 1 \\
+	 $h_2$ & 0 & 2 & 0 & 0
+	\end{tabular}
+	\caption{Row 4}
+	\end{table}
  	
  \section{Question 3}
  
