--- a/Opdracht1/report/opdracht1.tex
+++ b/Opdracht1/report/opdracht1.tex
@@ -52,19 +52,9 @@
 \section{Question 2}
 
 	\subsection{Question 2.1}
+	First we create our signature matrix
 	
-\section{Question 4}
-
- 	\subsection{Question 4.1}
- 	
- \chapter{Locality Sensitive Hashing}
- 
- \section{Question 2}
- 
- 	\subsection{Question 2.1}
- 	First we create our signature matrix
- 	
- 	\begin{table}[h!]
+	\begin{table}[h!]
 	\centering
 	\label{my-label}
 	\begin{tabular}{lllll}
@@ -168,7 +158,19 @@
 	\end{tabular}
 	\caption{Row 4}
 	\end{table}
+
+	
+\section{Question 4}
+
+ 	\subsection{Question 4.1}
+ 	The result from our script satisfies the result as found in Question 2.1
  	
+ \chapter{Locality Sensitive Hashing}
+ 
+ \section{Question 2}
+ 
+ 	\subsection{Question 2.1}
+ 	 	
  \section{Question 3}
  
  	\subsection{Question 3.1}
