--- a/Opdracht1/report/opdracht1.tex
+++ b/Opdracht1/report/opdracht1.tex
@@ -179,12 +179,60 @@
  	
  	\subsection{Question 3.2}
  	
+ 	\textbf{Iteration 1}
+ 	Result: (0,3) \\
+
+	\textbf{Iteration 2}
+	Result: (0,3) \\
+
+	\textbf{Iteration 3}
+	Result: (0,3) \\
+
+	\textbf{Iteration 4}
+	Result: (0,3), (0,2) \\
+
+	\textbf{Iteration 5}
+	Result: (0,3), (0,2) \\
+
+	\textbf{Iteration 6}
+	Result: (0,3), (0,2), (1,3), (2,3) \\
+
+	\textbf{Iteration 7}
+	Result: (0,3), (1,3) \\
+
+	\textbf{Iteration 8}
+	Result: (0,3), (0,2), (1,3) \\
+
+	\textbf{Iteration 9}
+	Result: (0,3) \\
+
+	\textbf{Iteration 10}
+	Result: (0,3) \\
+ 	
+ 	If we calculate the Jaccard distances we find: \\
+ 	Jaccard distance (0,2) = 0,75 \\
+ 	Jaccard distance (0,3) = 0,33 \\
+ 	Jaccard distance (1,3) = 0,66 \\
+ 	Jaccard distance (2,3) = 0,8 \\
+ 	
+ 	If we calculate the relative frequencies in our 10 samples, we find: \\
+ 	1 - Relative frequency (0,2) = 1 - (4/10) = 0,6 \\
+ 	1 - Relative frequency (0,3) = 1 - (10/10) = 0 \\
+ 	1 - Relative frequency (1,3) = 1 - (3/10) = 0,7 \\
+ 	1 - Relative frequency (2,3) = 1 - (1/10) = 0,9 \\
+ 	
+ 	We see that the Jaccard distances fit the relative distance quite well. 
  	
  	\subsection{Question 3.3}
+ 	If the data set is too large to look compare against all data, we first have to determine possible candidates and compare our sample with this data. 
  	
  	\subsection{Question 3.4}
- 	
+ 	If the number of buckets is small, this means that the modulo with which we calculate the hash is small. This means that the chance of collisions between the column segments of the signature matrix will get bigger. Of course we don\'t want this, since we only want valid candidates in the same bucket.
+ 	 	
  	\subsection{Question 3.5}
+ 	If the number of rows per band is small, this means that column segments can easily be the same for different columns, which means we get a lot of candidates/false positives. If the number of rows per band is the same as the length of the signature, this means that only sets which are exactly the same will be put in the same bucket. \\
+ 	The bigger the number of candidates, the smaller the effect of this algorithm, since we are using this algorithm to divide the complete set into smaller sets. In the latter case, we put every set in its own bucket, which doesn\'t give any candidates at all. 
+
 		
 	
 \begin{thebibliography}{9}
