minor changes to opdracht2, uploaded baseline opdracht3

--- a/Opdracht1/report/opdracht1.tex
+++ b/Opdracht1/report/opdracht1.tex
@@ -23,7 +23,7 @@
 \maketitle
 \clearpage
 
-\chapter{Shingles}
+\textbf{Shingles}
 
 \section{Question 1}
 	
@@ -47,7 +47,7 @@
 	\subsection{Question 5.1}
 		Only in the word touchdown, removing the spaces affects the similarity of shingles. Therefore the Jaccard distance will decrease, although it is only a little bit. 
 		
-\chapter{Minhashing}
+\textbf{Minhashing}
 
 \section{Question 2}
 
@@ -165,7 +165,7 @@
  	\subsection{Question 4.1}
  	The result from our script satisfies the result as found in Question 2.1
  	
- \chapter{Locality Sensitive Hashing}
+ \textbf{Locality Sensitive Hashing}
  
  \section{Question 2}
  
