--- a/Opdracht2/report/opdracht2.tex
+++ b/Opdracht2/report/opdracht2.tex
@@ -24,7 +24,7 @@
 \maketitle
 \clearpage
 
-\chapter{Perceptron}
+\textbf{Perceptron}
 
 \section{Question 0}
 	
@@ -48,7 +48,7 @@
 
 	\subsection{Question 3.1}
 	The yellow line represents the weights-vector. If we want to know the prediction of a label, we just multiply the (x,y) by the weights-vector. \\
-	Therefore the black line, which is the decision boundary, represents all points for which $w' x^{T}' = 0$. This means that the decision boundary is the inverse of the weights vector.  
+	Therefore the black line, which is the decision boundary, represents all points for which $w' x^{T'} = 0$. This means that the decision boundary is the inverse of the weights vector.  
 	
 \begin{figure}[ht]
     \centering
@@ -92,7 +92,7 @@
 	\subsection{Question 8.1}
 	From the 400 test records, 6 are misclassified. From these 1 is a one which is located a little bit too far to the left and has big base and tilting top. The zeros don\'t have a very big gap in the middle. All 6 records are quite different than most other inputs and are therefore misclassified.
 
-\chapter{Nearest Neighbour}
+\textbf{Nearest Neighbour}
 
 \section{Question 1}
 
